Spacing fixes

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1735,7 +1735,7 @@ mux-player {
   .post-feed:last-child,
   .portfolio-feed:last-child,
   .page-header:last-child {
-    padding-bottom: 5em;
+    padding-bottom: 3em;
   }
   
   .block {
@@ -2038,7 +2038,7 @@ mux-player {
   }
   
   .post-thumbnail {
-    margin-bottom: 0;
+    margin-bottom: var(--space-xl);
   }
   
   .post-header {
